[package]
name = "ssl-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = { version = "4", features = ["openssl"] }
env_logger = "0.9"
openssl = "0.10"
futures = "0.3"
async-stream = "0.3"
mousse = "0.1"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
rand = { version = "0.8", features = ["std", "std_rng"] }
log = "0.4"
